my first projet

--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
     </head>
     <body>
     <center><h1><b>G-Budget Financial</b></h1></center>
-    <div class="contener">
-        <div><button type="submit" id="ajoutedepense" >Ajoute Depense</button></div>
-        <div><button type="submit" id="ajoutrevenu" >Ajoute Revenu</button></div>
+    <div class="container">
         <div>
-        <div>
+            <button type="submit" id="ajoutedepense">Ajoute Depense</button>
+        </div>
         <div id="formulairedepense">
             <div>
-             <div>
-                <table width="400px" height="150px" class="formulaire"  id="table"  >
-                    <form onsubmit="recupDepense()">
+                <table width="400px" height="150px" class="formulaire"  id="table">
+                    <form>
                         <tr>
-                            <b><td><label for="descriptionDEP"><b>DESCRIPTION DEPENSE</b></label></td></b>
-                            <td><input type="text" id="descriptionDEP" name="descriptions" placeholder="Description du depense"></td>
+                            <b><td><label for="descriptionDEP"><b>DESCRIPTION DEPENSE</b></label></td>
+                            </b><td><input type="text" id="descriptionDEP" name="descriptions" placeholder="Description du depense"></td>
                         </tr>
                         <tr>
                             <b><td><label for="montantDEP"><b>MONTANT DEPENSE</b></label></td></b>
-                            <td><input  type="text" id="montantDEP" name="somme"  placeholder="Le montant du depense"></td>       
+                            <td><input  type="text" id="montantDEP" name="somme"  placeholder="Le montant du depense"></td>
                         </tr>  
                         <tr>
                             <td><b>ENVOIYER DEPENSE</b></td>
@@ -35,27 +33,25 @@
                     </form>
                 </table>
             </div>
-            </div>
-            </div>
-            <div>
-                <table border="3" class="tableau" width="500px" height="100px" >
-                    <tr><th colspan="2" id="longeurth" >Revenu (fcfa)</th>
-                        <th>Action</th>
-                    </tr>
-                    <tr>
-                        <td id="desp" ><b>Description du revenu</b></td>
-                        <td><b>Montant du revenu verser</b></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </div>
         </div>
-    </div>
-    <div classe="block">
         <div>
-        <div id="formulairevenu" >
-            <table width="400px" height="150px" class="formulaire" >
-                <form onsubmit="recupRevenu()">
+            <table border="3" id="tableDepense" width="500px" height="100px" >
+                <tr>
+                    <th colspan="2" id="longthRevenu">Depense (fcfa)</th>
+                    <th>Action</th>       
+                </tr>
+                <tr>
+                    <td><b>Description du Depense</b></td>
+                    <td><b>Montant Depense</b><td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <button type="submit" id="ajoutrevenu">Ajoute Revenu</button>
+        </div>
+        <div id="formulairevenu">
+            <table width="400px" height="150px" class="formulaire">
+                <form>
                     <tr>
                         <b><td><label for="descriptionrev"><b>DESCRIPTION REVENU</b></td></label></td></b>
                         <td><input type="text" id="descriptionrev" name="descriptions" placeholder="Description du revenu"></td>
@@ -72,20 +68,19 @@
             </table>
         </div>
         <div>
-            <table border="3" id="tableDepense" width="500px" height="100px" >
+            <table border="3" class="tableau" width="500px" height="100px" >
                 <tr>
-                    <th colspan="2" id="longthRevenu">Depense (fcfa)</th>
-                    <th>Action</th>       
+                    <th colspan="2" id="longeurth" >Revenu (fcfa)</th>
+                    <th>Action</th>
                 </tr>
                 <tr>
-                    <td><b>Description du Depense</b></td>
-                    <td><b>Montant Depense</b><td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+                    <td id="desp" ><b>Description du revenu</b></td>
+                    <td><b>Montant du revenu verser</b></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
     </div>
     </body>
-    </html>
+</html>
     
